# control

./: .agentconfig.yml  .bandit  .codespellrc  .cspell.json  .dockerignore  .editorconfig  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENT.md  CHANGELOG.md  IMPLEMENTATION_REPORT.md  Makefile  README.md  README_ENTERPRISE.md  conftest.py  control.code-workspace  docker-compose.testing.yml  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  pyvenv.cfg  setup.bat  setup.sh  sitecustomize.py  testing.Dockerfile  worklog.md
.github/: BRANCH_PROTECTION.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: auto-pr-develop-main.yml  ci.yml  control-ci.yml
config/: __init__.py  conftest.py  pyrightconfig.json
config/linting/: .cspell.json  .markdownlint.json  .pylanceignore
control/: __init__.py  git_manager.py  github_manager.py  project_manager.py
control.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
devops/: Dockerfile.codex
docs/: ADVANCED.md  AI_AGENT_GUIDE.md  COMPLETE_SETUP_GUIDE.md  ENTERPRISE_STANDARDS.md  FINAL_PRODUCTION_CHECKLIST.md  GITHUB_ACTIONS_EMERGENCY_FIX.md  GITHUB_SYNC_REPORT.md  PR_POLICY.md  RELEASE_NOTES_v1.0.1.md  SECURITY.md  WINDOWS_SETUP.md  coding_standard.md
docs/api/: openapi.yaml
pkg/control/: __init__.py  docker_manager.py  git_manager.py  github_manager.py  main.py  migration_manager.py  project_manager.py  sitecustomize.py
schemas/: answer_contract_v1.json  pca2_v1.json  provenance_receipt_v1.json
scripts/: Makefile  apply_coding_standard.py  check_headers.py  fix_headers.py  hook-setup.sh  openapi-sync.sh  pre-commit-cspell.sh  setup.sh  verify-markdown.sh  verify_system.py
scripts/gates/: _run_inner.py  auto_calibrate_omega.py  boundary_rebuild_gate.py  compute_gauge_drift.py  compute_gauge_epsilon.py  gauge_gate.py  path_coverage_gate.py  pqcrypto_gate.py  roles_policy_gate.py  sdk_contract_gate.py  security_bunker_gate.py
scripts/orchestrator/: bootstrap-queues.sh
scripts/remote-bot/: clone-repo.sh  get_installation_token.py  gh_app_token.sh  list-repos.sh  pack-secret.sh  setup.sh  wait-branch-green.sh  wait-pr-green.sh  with-gh.sh
security/: ra.py
tasks/: A0.md  A1.md  A2.md  A3.md  A4.md  A5.md  A6.md  A7.md  A8.md  A9.md  README.md
tests/: __init__.py  test_cli.py  test_control.py
tools/: apply_coding_standard.py  hook-setup.sh  openapi-sync.sh  pre-commit-cspell.sh  verify-markdown.sh
(+34 files in other folders)
